--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1',
-            'com.codeborne:selenide:5.20.3'
+            'com.codeborne:selenide:5.20.3',
+            'com.github.javafaker:javafaker:1.0.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
